:sparkles: implement movie list filter by genre
